# etch

./: Makefile.am  TODO  configure.ac  etch.pc.in
doc/: Doxyfile.in
src/include/: Etch.h  Makefile.am  etch_private.h
src/lib/: Etch.h  Makefile.am  Makefile.mk  etch.c  etch_animation.c  etch_interpolator_argb.c  etch_interpolator_double.c  etch_interpolator_float.c  etch_interpolator_int32.c  etch_interpolator_string.c  etch_interpolator_uint32.c  etch_private.h
