
ACLOCAL_AMFLAGS = -I m4

SUBDIRS = src

MAINTAINERCLEANFILES = \
Makefile.in \
aclocal.m4 \
config.guess \
config.h.in \
config.sub \
configure \
install-sh \
ltconfig \
ltmain.sh \
missing mkinstalldirs \
stamp-h.in \
build-stamp \
configure-stamp \
depcomp

EXTRA_DIST = \
AUTHORS \
COPYING \
gendoc \
Doxyfile \
README \
etch.pc.in

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = etch.pc
